--- a/notebooks/inference_wandb.ipynb
+++ b/notebooks/inference_wandb.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install -q git+https://github.com/soumik12345/dreambooth-keras.git"
+    "!pip install -q git+https://github.com/soumik12345/dreambooth-keras.git"
    ]
   },
   {
