updated wandb inference notebook

--- a/notebooks/inference_wandb.ipynb
+++ b/notebooks/inference_wandb.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🧨 Dreambooth-Keras + WandB 🪄🐝\n",
+    "\n",
+    "[![](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/soumik12345/dreambooth-keras/blob/main/notebooks/inference_wandb.ipynb)\n",
+    "\n",
+    "<!--- @wandbcode{dreambooth-keras-inference} -->\n",
+    "\n",
+    "This notebook shows how to perform inference with a DreamBooth fine-tuned Stable Diffusion model."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🌈 Install Dreambooth-Keras\n",
+    "\n",
+    "We would use [soumik12345/dreambooth-keras](https://github.com/soumik12345/dreambooth-keras) which is a fork of [sayakpaul/dreambooth-keras](https://github.com/sayakpaul/dreambooth-keras) developed by [**Sayak Paul**](https://github.com/sayakpaul) and [**Chansung Park**](https://github.com/deep-diver)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -18,6 +42,16 @@
     "import wandb\n",
     "from PIL import Image\n",
     "from dreambooth_keras.utils import load_model_from_wandb_artifact"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🐝 Initialize WandB run\n",
+    "\n",
+    "We initialize a [Weights & Biases run](https://docs.wandb.ai/guides/runs) for storing generated images to a [Weights & Biases table](https://docs.wandb.ai/guides/data-vis)."
    ]
   },
   {
@@ -45,6 +79,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🧑‍🎨 Perform Inference"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we load our model from Weights & Biases artifacts created using the [`dreambooth_keras.utils.DreamBoothCheckpointCallback`](https://github.com/soumik12345/dreambooth-keras/blob/main/dreambooth_keras/utils.py#L93) which automatically logs model checkpoints as [Weights & Biases artifacts](https://docs.wandb.ai/guides/data-and-model-versioning) at the end of each epoch during training. We load these checkpoint using the simple utility [`dreambooth_keras.utils.load_model_from_wandb_artifact`](https://github.com/soumik12345/dreambooth-keras/blob/main/dreambooth_keras/utils.py#L23)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -53,13 +103,45 @@
     "dreambooth_model = load_model_from_wandb_artifact(\n",
     "    artifact_address=config.model_artifact_address,\n",
     "    image_resolution=config.image_resolution\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we perform inference on our *dreamboothed* stable-diffusion model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "images = dreambooth_model.text_to_image(\n",
     "    config.prompt,\n",
     "    batch_size=config.batch_size,\n",
     "    num_steps=config.num_diffusion_steps,\n",
     "    unconditional_guidance_scale=config.unconditional_guidance_scale,\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we log our images to a [Weights & Biases table](https://docs.wandb.ai/guides/data-vis) that not only makes ut easier to visualize but also easily accessible for future reference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "images = [\n",
     "    wandb.Image(Image.fromarray(image), caption=f\"{i}: {config.prompt}\")\n",
     "    for i, image in enumerate(images)\n",
@@ -72,8 +154,7 @@
     "    config.image_resolution,\n",
     "    config.num_diffusion_steps\n",
     ")\n",
-    "wandb.log({\"Inference-Results\": wandb_table})\n",
-    "wandb.finish()"
+    "wandb.log({\"Inference-Results\": wandb_table})"
    ]
   },
   {
@@ -81,7 +162,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wandb.finish()"
+   ]
   }
  ],
  "metadata": {
